Fix line spacing for headings

--- a/css/cometvisu.css
+++ b/css/cometvisu.css
@@ -22,6 +22,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
+  line-height: 2.2rem;
   color: #03a;
 }
 h1 {
